# CineMan

./: .env.example  .gitignore  LICENSE.md  README.md  init_yoyo_tables.py  main.py  pyproject.toml  seed_users.py  verify_db.py  yoyo.ini  yoyo.ini.example
migrations/: 20251126_01_wGjzL-initial-schema.py  20251130_220002_seed_user_roles.py  20251205_01_haxM9-create-initial-cinema-schema.py  20251205_02_6F0yJ-seed-initial-test-data.py  20251212_01_10msb-schema-base-completa.py  20251212_02_PcF75-seed-datos-esenciales.py  20251212_03_6eVqZ-seed-datos-desarrollo.py  20251214_04_add_unique_constraints_to_inventory.py
src/config/: settings.py
src/database/: connection.py
src/models/: models.py  transaction.py
src/services/: inventory_service.py  movie_service.py  sales_service.py  schedule_service.py  theater_service.py  user_service.py
src/ui/: router.py  theme.py
src/ui/components/: dialogs.py  movie_card.py  product_card.py  seat_map.py  sidebar.py
src/ui/screens/: login_screen.py  main_screen.py
src/ui/views/: dashboard_view.py  inventory_view.py  reports_view.py  sales_view.py  schedules_view.py  settings_view.py  users_view.py
src/ui/views/admin/: ingredient_picker_dialog.py  inventory_import_dialog.py  inventory_item_dialog.py  inventory_view.py  movie_dialog.py  movies_view.py  product_dialog.py  recipes_view.py  seat_editor_dialog.py  stock_adjustment_dialog.py  theater_dialog.py  theaters_view.py
src/utils/: helpers.py  migrations.py  security.py
