[project]
name = "cine"
version = "0.1.0"
description = "Project CineMan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=41.0.0",
    "flet[all]>=0.28.3",
    "mysql-connector-python>=9.0.0",
    "python-dotenv>=1.2.1",
    "yoyo-migrations>=9.0.0",
]
